// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCredentialsData function returns a single space 1`] = `
Array [
  Object {
    "accessToken": "XXXXXXXXXXXXXXXXXXXXXXX",
    "environment": "AAAAAAAAAAAAAAAA",
    "spaceId": "YYYYYYYYYYYYY",
  },
]
`;

exports[`getCredentialsData function returns a single space with default ENVIRONMENT 1`] = `
Array [
  Object {
    "accessToken": "XXXXXXXXXXXXXXXXXXXXXXX",
    "environment": "master",
    "spaceId": "YYYYYYYYYYYYY",
  },
]
`;

exports[`getCredentialsData function returns multiple spaces 1`] = `
Array [
  Object {
    "accessToken": "XXXXXXXXXXXXXXXXXXXXXXX",
    "environment": "AAAAAAAAAAAAAAAA",
    "spaceId": "YYYYYYYYYYYYY",
  },
]
`;

exports[`getCredentialsData function throws an error if no credentials are set 1`] = `"You need to define SPACE_ID and ACCESS_TOKEN in your .env.testing file"`;
